Add separate PropTypes package

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "homepage": "https://github.com/gabergg/react-scrollable-anchor",
   "dependencies": {
-    "jump.js": "1.0.1"
+    "jump.js": "1.0.1",
+    "prop-types": "^15.5.10"
   },
   "peerDependencies": {
     "react": "^15.3.0",
